WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28822
REGRESSION(
r31231
): Creating document with current document's DOCTYPE causes crashes
https://bugs.webkit.org/show_bug.cgi?id=28822
Summary
REGRESSION(r31231): Creating document with current document's DOCTYPE causes ...
Sam Sneddon [:gsnedders]
Reported
2009-08-28 14:50:02 PDT
Created
attachment 38758
[details]
Test Case With the attached test case reloading it twice causes Safari to crash. Similarly, if you try and modify the script at
http://software.hixie.ch/utilities/js/live-dom-viewer/saved/221
Safari will crash.
Attachments
Test Case
(568 bytes, text/html)
2009-08-28 14:50 PDT
,
Sam Sneddon [:gsnedders]
no flags
Details
proposed fix
(6.88 KB, patch)
2009-09-03 15:56 PDT
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2009-08-28 14:55:36 PDT
<
rdar://problem/7180197
>
Alexey Proskuryakov
Comment 2
2009-09-03 15:56:52 PDT
Created
attachment 39015
[details]
proposed fix
Alexey Proskuryakov
Comment 3
2009-09-03 17:28:32 PDT
Committed <
http://trac.webkit.org/changeset/48037
>.
Lucas Forschler
Comment 4
2019-02-06 09:02:47 PST
Mass moving XML DOM bugs to the "DOM" Component.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug