        Reviewed by Darin Adler.

<rdar://problem/7180197>, https://bugs.webkit.org/show_bug.cgi?id=28822
        REGRESSION(r31231): Creating document with current document's DOCTYPE causes crashes

        Test: fast/dom/DOMImplementation/createDocument-with-used-doctype.html

        * dom/DOMImplementation.cpp: (WebCore::DOMImplementation::createDocument): Even though we
        cannot raise an exception immediately out of fear of breaking Acid3, we shouldn't use a
        DocumentType node in two documents.



Canonical link: https://commits.webkit.org/39613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48037 268f45cc-cd09-0410-ab3c-d52691b4dbfc